# group-agf

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yaml  modular_arithmetic.ipynb  pyproject.toml  setcwd.py  sweeps  znz_znz.ipynb
.github/workflows/: ci.yml
gagf/: datasets.py  models.py  theory.py  train.py  viz.py
gagf/group_learning/: datasets.py  default_config.py  group_fourier_transform.py  main.py  models.py  optimizer.py  plot.py  power.py  train.py
gagf/rnns/: README.md  config.yaml  create_combined_power_plot.py  create_combined_power_plot_k4_k5.py  datamodule.py  main.py  model.py  optimizers.py  rnn_gagf.ipynb  run_sweep.py  seq_mlp.ipynb  seq_mlp_group_size.ipynb  train.py  utils.py
gagf/wandb/: latest-run
group_agf/binary_action_learning/: datasets.py  default_config.py  group_fourier_transform.py  main.py  models.py  optimizer.py  plot.py  power.py  templates.py  train.py
notebooks/: 2D.ipynb  C_n.ipynb  cn.ipynb  cnxcn.ipynb  dihedral-group.ipynb  dihedral.ipynb  dn.ipynb  group_defining_rep.ipynb  modular_arithmetic.ipynb  paper_figures.ipynb  rnn_gagf.ipynb  seq_mlp.ipynb  seq_mlp_group_size.ipynb  sequential_cnxcn.ipynb  setcwd.py  znz_znz.ipynb
src/: README.md  config.yaml  config_a5.yaml  config_c10.yaml  config_c4x4.yaml  config_d3.yaml  config_octahedral.yaml  create_combined_power_plot.py  create_combined_power_plot_k4_k5.py  datamodule.py  dataset.py  datasets.py  fourier.py  group_fourier_transform.py  main.py  model.py  optimizers.py  plot.py  power.py  run_sweep.py  template.py  templates.py  viz.py
src/sweep_configs/: example_sweep.yaml  learning_rate_sweep.yaml  (+2 more)
test/: __init__.py  test_bal_datasets.py  test_bal_group_fourier_transform.py  test_bal_main.py  test_bal_models.py  test_bal_power.py  test_bal_templates.py  test_config.yaml  test_config_a5.yaml  test_config_c10.yaml  test_config_c4x4.yaml  test_config_d3.yaml  test_config_octahedral.yaml  test_dataset.py  test_default_config.py  test_fourier.py  test_main.py  test_model.py  test_notebooks.py  test_optimizer.py  test_power.py  test_rnns_config.yaml  test_rnns_datamodule.py  test_rnns_main.py  test_rnns_model.py  test_rnns_optimizers.py  test_rnns_utils.py  test_run_sweep.py  test_sweep_example.yaml  test_sweep_learning_rate.yaml  test_sweep_model_size.yaml  test_sweep_onehot_grid.yaml  test_template.py
(+62 files in other folders)
