[tool.poetry]
name = "gagf"
version = "0.1.0"
description = "Learning"
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.2.1"
numpy = "^1.26.4"
ruff = "*"
pre-commit = "*"
matplotlib = "*"
jupyter = "*"
jupyterlab = "*"
pandas = "*"
scikit-image = "*"
scipy = "*"
torchvision = "*"
wandb = "*"
jupyterlab-code-formatter = "^3.0.2"
pytest = "^8.3.4"
ipykernel = "^6.29.5"
pykernel = "^0.1.6"
scikit-learn = "^1.7.2"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
jupyter-black = "^0.4.0"
escnn = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "*.ipynb",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
    "F403",  # star imports (used intentionally for escnn.group)
    "F405",  # may be undefined from star imports
    "F841",  # local variable assigned but never used (common in notebooks/experiments)
    "B007",  # loop control variable not used (common pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["gagf", "group_agf", "default_config"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
